5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1734_2503.log
== TEST (2019-05-16 16:24:07) 
-- CODE:
from math import *
n = float(input("Digite o numero de termos: "))
pi = soma
i = 1
c = 0
soma = 0

while c < n:
	sinal = (-1) ** c
	soma = soma + (sinal * (4)) / (i)
	c = c + 1
	i = i + 2
print(round(soma, 8))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    pi = soma
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:24:27) 
-- CODE:
from math import *
n = float(input("Digite o numero de termos: "))
i = 1
c = 0
soma = 0

while c < n:
	sinal = (-1) ** c
	soma = soma + (sinal * (4)) / (i)
	c = c + 1
	i = i + 2
print(round(soma, 8))




-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:24:37) 
-- CODE:
from math import *
n = float(input("Digite o numero de termos: "))
i = 1
c = 0
soma = 0

while c < n:
	sinal = (-1) ** c
	soma = soma + (sinal * (4)) / (i)
	c = c + 1
	i = i + 2
print(round(soma, 8))




-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:24:44) 
-- CODE:
from math import *
n = float(input("Digite o numero de termos: "))
i = 1
c = 0
soma = 0

while c < n:
	sinal = (-1) ** c
	soma = soma + (sinal * (4)) / (i)
	c = c + 1
	i = i + 2
print(round(soma, 8))




-- EXECUTION TIME:
0.13246
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
